working event listener

--- a/html/index.html
+++ b/html/index.html
@@ -19,11 +19,25 @@
 
           <!----<img class="img-dbgt" src="/img/dbgt.jpg" alt="My dgbt">---->
         <div class= "img-dbgt">
-          <h1>Extra video features example</h1>
-         <div class="videowrapper">
-          <iframe src="https://www.youtube.com/embed/5W4V7FGqwtg" title="YouTube video player" frameborder="0"
-           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-         </div>
+          <h1>Sample Slideshow</h1>
+          <div class="carousel-container">
+            <div class="carousel-slide">
+              <img src="/img/ricknmorty.jpg" id="lastClone" alt="stance 5">
+              <img src="/img/dbgt2.jpg" alt="stance 2">
+              <img src="/img/rez1.jpg" alt="stance 5">
+              <img src="/img/halo1.jpg" alt="stance 4">
+              <img src="/img/ricknmorty.jpg" id="firstClone" alt="stance 5">
+
+
+            </div>
+
+          <button id="prevBtn">Prev</button>
+          <button id="nextBtn">Next</button>
+
+
+          <script src="/scripts/scripts.js"></script>
+          </div>
+          
         </div>
         </div>
     </body>
