--- a/html/index.html
+++ b/html/index.html
@@ -7,18 +7,13 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
     <title>teamlab</title>
-    <style><style>
-      video {
-        background: black;
-      }
-      </style>
+    
 </head>
 <body>
+  <img class="img-dbgt" src="/img/dbgt.jpg" alt="My dgbt">
     <div class="wrapper">
-        <h1>Gamers Raven Test</h1>
-
-          <!----<img class="img-dbgt" src="/img/dbgt.jpg" alt="My dgbt">---->
-        <div class= "img-dbgt">
+      <div class= "img-dbgt">
+        <h1>Gamers Raven Test</h1> 
           <h1>Sample Slideshow</h1>
           <div class="carousel-container">
             <div class="carousel-slide">
@@ -26,9 +21,7 @@
               <img src="/img/dbgt2.jpg" alt="stance 2">
               <img src="/img/rez1.jpg" alt="stance 5">
               <img src="/img/halo1.jpg" alt="stance 4">
-              <img src="/img/ricknmorty.jpg" id="firstClone" alt="stance 5">
-
-
+              <img src="/img/ricknmorty.jpg" id="firstClone" alt="stance 1">
             </div>
 
           <button id="prevBtn">Prev</button>
